--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Smart Home",
-  "short_name": "Smart Home",
+  "name": "Smart Quote",
+  "short_name": "Smart Quote",
   "start_url": "/",
   "background_color": "#0d6efd",
   "theme_color": "#0d6efd",
