--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts":{
     "build":"tailwindcss -i ./style/input.css -o ./css/main.css",
-    "watch":"tailwindcss -i ./style/input.css -o ./css/main.css -watch"
+    "watch":"tailwindcss -i ./style/input.css -o ./css/main.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.2.7"
